--- a/Maximum-clique-problem-porocilo.tex
+++ b/Maximum-clique-problem-porocilo.tex
@@ -230,7 +230,7 @@ Maksimalna klika je velikosti $3$ in povezuje vozlišča $4948, 8042, 6634$.
 \includegraphics[width=10cm, height=4cm]{klika2}
 \end{figure}
 
-Funkcija za iskanje psevdo-klike velikosti vsaj k nama deluje na povezanem podgrafu H in nama vrne za $n=100$ maksimalno kliko. Na komplementu povezanega podgrafa se izvaja v neskončnost. Funkcija, ki izvede bisekcijo, pa nama tako kot za povezani podgraf, kot njegov komplement vrača prazno množico, ne glede na velikost grafa. Zavedava se, da se v funkciji \textit{max\_psevdoklika(H, k, a)} in \textit{bisekcija(C, a=0.9)} nahaja napaka, vendar je žal še nisva uspeli odpraviti.
+Funkcija za iskanje psevdo-klike velikosti vsaj $k$ nama deluje na povezanem podgrafu $H$ in nama vrne za $n=100$ maksimalno kliko. Na komplementu povezanega podgrafa se izvaja v neskončnost. Funkcija, ki izvede bisekcijo, pa nama tako kot za povezani podgraf, kot njegov komplement vrača prazno množico, ne glede na velikost grafa. Zavedava se, da se v funkciji \textit{max\_psevdoklika(C, k, a)} in \textit{bisekcija(C, a=0.9)} nahaja napaka, vendar je žal še nisva uspeli odpraviti.
 
 
 
