--- a/Poročilo/Maximum-clique-problem-porocilo.tex
+++ b/Poročilo/Maximum-clique-problem-porocilo.tex
@@ -216,12 +216,18 @@ Poglejmo si vhodne in izhodne podatke funkcije \textit{bisekcija(G, a = 0.9)}.\\
 
 Kot sva omenili je iskanje maksimalne klike (kvaziklike) na najinem originalnem grafu preveč zahtevno in sva se omejili le na iskanje maksimalne klike (kvaziklike) na ustrezni podmnožici grafa.\\
 
-Največji povezan podgraf, kjer nama je program še vrnil maksimalno kliko v doglednem času, je bil podgraf s številom vozlišč $300$. Na njemu sva dobili maksimalno kliko velikosti $6$ in sicer na vozliščih $15, 3643, 3956, 737, 766, 4310$ . Čas iskanja največje klike je znašal 261.39 s. Čas iskanja največje 6-psevdoklike je bil 238.48 s, največja 6-psevdoklika pa povezuje vozlišča $3643, 5743, 766, 2516, 4310, 3614$. \\Največja kvaziklika, pri podgrafu velikosti 300 je enaka 7 in povezuje vozlišča \\$6123, 737, 1403, 766, 6032, 4310, 2485$. Čas iskanja največje klike je bil 14412.2 s. Program je za izračun vsega porabil 14912.07 s.\\
+Največji povezan podgraf, kjer nama je program še vrnil maksimalno kliko v doglednem času, je bil podgraf s številom vozlišč $300$. Na njemu sva dobili maksimalno kliko velikosti $6$ in sicer na vozliščih $15, 3643, 3956, 737, 766, 4310$ . Čas iskanja največje klike je znašal 261.39 s. Čas iskanja največje 6-psevdoklike je bil 238.48 s, največja 6-psevdoklika pa povezuje vozlišča $3643, 5743, 766, 2516, 4310, 3614$. \\Največja kvaziklika, pri podgrafu velikosti 300 je enaka 7 in povezuje vozlišča \\$6123, 737, 1403, 766, 6032, 4310, 2485$. Čas iskanja največje kvaziklike je bil 14412.2 s. Program je za izračun vsega porabil 14912.07s, torej dobre 4 ure.\\
+V tem primeru, se je pri poganjanju funkcije max\_psevdoklika pred bisekcijo za k uporabila velikost največje klike ($k = 6$).
+\\
 
-Tukaj morava pripomniti, da sva delali na naključnem povezanem podgrafu in nam zaradi naključnosti lahko program vsakič ob vsaki izvedbi lahko vrne drugačen podgraf in s tem drugačno maksimalno kliko.\\
+Če pa sva za $k$ uporabili vrednost iz prvega koraka bisekcije, torej $k = floor\frac{\mathrm{len}(najvecja\_klika) + n}{2}$ (v tem primeru je kot rečeno, $n = 300$), pa je bil za vse skupaj porabljen čas slabih 80 minut. Na tem mestu ne bova znova pisali, na katerih vozliščih sva dobili rezultate, saj morava pripomniti, da sva delali na naključnem povezanem podgrafu in lahko zaradi naključnosti program ob vsaki izvedbi vrne drugačen podgraf in s tem drugačno maksimalno kliko.\\
 
 Za podgraf velikosti $100$ sva dobili maksimalno kliko velikosti $4$ in sicer kliko, ki povezuje vozlišča $2135, 4191, 4335, 2909$. Čas iskanja največje klike v podgrafu velikosti 100 je bil 1.23 s. Čas iskanja 4-psevdoklike je bil 0.49 s in le-ta povezuje vozlišča $2135, 4335, 4899, 2909$.
-Največja kvaziklika je bila velikosti 5 in vsebuje vozlišča $2135, 4191, 4335, 4948, 29094$. Čas iskanja največje kvaziklike je bil 7.56 s. Program je za izračun vsega porabil 9.28 s. \\
+Največja kvaziklika je bila velikosti 5 in vsebuje vozlišča $2135, 4191, 4335, 4948, 29094$. Čas iskanja največje kvaziklike je bil 7.56 s. Program je za izračun vsega porabil 9.28 s. 
+\\
+
+Če pa sva za $k$ uporabili vrednost iz prvega koraka bisekcije, sva za podgraf velikosti $100$ sva dobili maksimalno kliko velikosti $4$ in sicer kliko, ki povezuje vozlišča $2576, 1972, 2485, 3009$. Čas iskanja največje klike v podgrafu velikosti 100 je bil 1.19 s. Čas iskanja 52-psevdoklike je bil 0.03, v tem primeru je največja 52-psevdoklika kar prazen seznam. Največja kvaziklika je bila velikosti 4 in vsebuje vozlišča $2576, 1972, 2485, 3009$. Čas iskanja največje kvaziklike je bil 9.57 s. Program je za izračun vsega porabil 10.79 s. 
+\\
 
 Opazimo da se z večanjem velikosti grafa, časovna zahtevnost zelo povečuje. Za trikratno povečanje velikosti grafa, se je čas izvedbe povečal za več kot 1500-krat. Opazimo, da ima največjo časovno zahtevnost funkcija za iskanje največje kvaziklike. To je tudi logično, saj je to edina funkcija, ki tudi kliče funkciji za izračun k-psevdoklike in največje klike. Najmanjšo časovno zahtevnst, pa ima funkcija za iskanje k-psevdoklike. \\
 
